@@ -1,6 +1,8 @@
 #! /usr/bin/env python
 
 from pycrtools import *
+trackHistory(True)
+
 #------------------------------------------------------------------------
 #Input section
 #------------------------------------------------------------------------
